--- a/ai/energy_model.ipynb
+++ b/ai/energy_model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -55,6 +55,8 @@
               "      <th>TOTROOMS</th>\n",
               "      <th>NHSLDMEM</th>\n",
               "      <th>ATHOME</th>\n",
+              "      <th>AIRCOND</th>\n",
+              "      <th>HIGHCEIL</th>\n",
               "      <th>KWH</th>\n",
               "      <th>NUM_DEVICES</th>\n",
               "    </tr>\n",
@@ -66,6 +68,8 @@
               "      <td>3</td>\n",
               "      <td>1</td>\n",
               "      <td>5</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
               "      <td>5243.05</td>\n",
               "      <td>3</td>\n",
               "    </tr>\n",
@@ -75,6 +79,8 @@
               "      <td>4</td>\n",
               "      <td>1</td>\n",
               "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
               "      <td>2387.64</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
@@ -84,6 +90,8 @@
               "      <td>3</td>\n",
               "      <td>2</td>\n",
               "      <td>5</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
               "      <td>5869.70</td>\n",
               "      <td>4</td>\n",
               "    </tr>\n",
@@ -93,6 +101,8 @@
               "      <td>3</td>\n",
               "      <td>1</td>\n",
               "      <td>5</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
               "      <td>3969.96</td>\n",
               "      <td>2</td>\n",
               "    </tr>\n",
@@ -100,6 +110,8 @@
               "      <th>9</th>\n",
               "      <td>1</td>\n",
               "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
               "      <td>3632.40</td>\n",
@@ -110,15 +122,22 @@
               "</div>"
             ],
             "text/plain": [
-              "   NCOMBATH  TOTROOMS  NHSLDMEM  ATHOME      KWH  NUM_DEVICES\n",
-              "1         1         3         1       5  5243.05            3\n",
-              "2         1         4         1       3  2387.64            0\n",
-              "4         1         3         2       5  5869.70            4\n",
-              "8         1         3         1       5  3969.96            2\n",
-              "9         1         4         1       0  3632.40            2"
+              "   NCOMBATH  TOTROOMS  NHSLDMEM  ATHOME  AIRCOND  HIGHCEIL      KWH  \\\n",
+              "1         1         3         1       5        1         1  5243.05   \n",
+              "2         1         4         1       3        1         0  2387.64   \n",
+              "4         1         3         2       5        1         0  5869.70   \n",
+              "8         1         3         1       5        1         0  3969.96   \n",
+              "9         1         4         1       0        1         0  3632.40   \n",
+              "\n",
+              "   NUM_DEVICES  \n",
+              "1            3  \n",
+              "2            0  \n",
+              "4            4  \n",
+              "8            2  \n",
+              "9            2  "
             ]
           },
-          "execution_count": 35,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -132,7 +151,8 @@
         "df = pd.read_csv(\"recs2020_public_v7.csv\")\n",
         "df = df[df[\"KWH\"] < 6000]\n",
         "df = df[df[\"KWH\"] > 1000]\n",
-        "base_cols = [\"NCOMBATH\", \"TOTROOMS\", \"NHSLDMEM\", \"ATHOME\", \"KWH\"]\n",
+        "\n",
+        "base_cols = [\"NCOMBATH\", \"TOTROOMS\", \"NHSLDMEM\", \"ATHOME\", \"AIRCOND\", \"HIGHCEIL\", \"KWH\"]\n",
         "device_cols = [\n",
         "    \"TVCOLOR\",\n",
         "    \"OVEN\",\n",
@@ -155,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 20,
       "metadata": {
         "id": "uTnXqpMcBSco"
       },
@@ -173,7 +193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -186,8 +206,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Train RMSE 945.59, MAE: 742.57\n",
-            "Test  RMSE 1312.61, MAE: 1071.85\n"
+            "Train RMSE 792.09, MAE: 602.74\n",
+            "Test  RMSE 1313.03, MAE: 1060.67\n"
           ]
         }
       ],
@@ -217,37 +237,6 @@
         "y_pred_train = rf.predict(X_train)\n",
         "y_pred_test = rf.predict(X_test)\n",
         "evaluate_model(y_train, y_test, y_pred_train, y_pred_test)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 38,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dE6raFbmFtPR",
-        "outputId": "662a8fd2-7033-4646-a657-ee242a305a1c"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Przewidywane zużycie energii (KWH): 3028.54\n"
-          ]
-        }
-      ],
-      "source": [
-        "new_data = pd.DataFrame({\n",
-        "    \"NCOMBATH\": [0.5],\n",
-        "    \"TOTROOMS\": [0.2],\n",
-        "    \"NHSLDMEM\": [0.5],\n",
-        "    \"ATHOME\": [0.5],\n",
-        "    \"NUM_DEVICES\": [0.14]\n",
-        "})\n",
-        "predicted_kwh = rf.predict(new_data)\n",
-        "print(f\"Przewidywane zużycie energii (KWH): {predicted_kwh[0]:.2f}\")"
       ]
     },
     {
